#9004 ID 입력 부분 특수 문자 제한 기능 - WebMvcConfigurer 통합 - validator 추가 및 dto에 적용

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -902,6 +902,7 @@ validation:
     pwNotContainSpace: "Password cannot contain spaces."
     pwOneBetween10And20: "For one character configurations, you must set a password between 10 and 20 characters."
     pwTwoBetween8And20: "For a two character configuration, you must set a password between 8 and 20 characters."
+    unacceptableCharacters: "Contains special characters (/ \ % ;) that are not allowed."
 
 # Project
 project:
