--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -228,6 +228,7 @@ code:
     pCode: "Parent Code"
     name: "Code Name"
     description: "Code Description"
+    seqNum: "The order of the output"
   msg:
     duplicateCode: "Duplicate code Exists."
     enterCode: "Please enter a code."
