#9224 [템플릿 SCSS] _elements.scss : portal 수정

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -656,7 +656,7 @@ portal:
     firefox: "Firefox"
     login: "Log In"
     main: "Main Page"
-    mainPhrase: "Alice Technical Support"
+    mainPhrase: "Technical Support"
     msEdge: "MS Edge"
     notice: "Notice"
     safari: "Safari"
