--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -656,7 +656,7 @@ portal:
     firefox: "Firefox"
     login: "로그인"
     main: "메인화면"
-    mainPhrase: "Alice 기술 지원"
+    mainPhrase: "기술 지원"
     msEdge: "MS Edge"
     notice: "공지사항"
     safari: "Safari"
