--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -259,9 +259,11 @@ customCode:
     valueColumn: "Value Column Name"
   msg:
     addCondition: "Only {0} or less can be added."
+    confirmDeleteCondition: "Are you sure you want to delete the condition?"
     customCodeUsed: "The Custom code is being used."
     description: "View, add, or edit Custom Code's information."
     duplicateCustomCodeName: "The same custom code name exists."
+    enterCondition: "Please enter the condition."
     enterCustomCode: "Please enter a custom code name."
     enterPCode: "Please enter your parental code."
     enterSearchColumn: "Please enter a search column name."
