--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -259,9 +259,11 @@ customCode:
     valueColumn: "값 컬럼 명"
   msg:
     addCondition: "{0}개 이하만 추가 가능합니다."
+    confirmDeleteCondition : "조건을 삭제하시겠습니까?"
     customCodeUsed: "사용 중인 사용자 정의 코드입니다."
     description: "커스텀 코드를 조회하거나 추가, 변경할 수 있습니다."
     duplicateCustomCodeName: "동일한 사용자 정의 코드 명이 존재합니다."
+    enterCondition: "조건을 입력하세요."
     enterCustomCode: "커스텀 코드 명을 입력하세요."
     enterPCode: "부모 코드를 입력하세요."
     enterSearchColumn: "검색 컬럼 명을 입력하세요."
