#9236 [템플릿 SCSS] _dropzone.scss : 파일 업로드

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -914,5 +914,6 @@ file:
   label:
     or: "or"
   msg:
-    upload: "Drop files here to upload."
     browser: "browser."
+    noAttachFile: "There are no attachments."
+    upload: "Drop files here to upload."
