--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -25,7 +25,7 @@ common:
     reject: "반려"
     terminate: "종결"
   label:
-    attachFile: "첨부파일"
+    attachFile: "첨부 파일"
     blank: " "
     comment: "댓글"
     contents: "내용"
@@ -914,5 +914,6 @@ file:
   label:
     or: "또는"
   msg:
-    upload: "업로드하려면 여기에 파일을 놓아 두세요."
     browser: "파일을 직접 찾으세요."
+    noAttachFile: "첨부 파일이 없습니다."
+    upload: "업로드하려면 여기에 파일을 놓아 두세요."
