--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -257,6 +257,7 @@ customCode:
     targetTable: "Target Table Name"
     type: "Type"
     valueColumn: "Value Column Name"
+    searchPlaceholder: "Custom Code Name"
   msg:
     addCondition: "Only {0} or less can be added."
     confirmDeleteCondition: "Are you sure you want to delete the condition?"
