#8956 [역할관리] 메뉴 설명 수정

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -781,7 +781,7 @@ role:
     enterRoleId: "Please enter a role id."
     enterRoleName: "Please enter a role name."
     selectAuth: "Please select a auth."
-    description: "Role management."
+    description: "View, add, or edit user's role."
     searchPlaceholder: "Role Name / Role Desc."
 
 # Token
