--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -781,7 +781,7 @@ role:
     enterRoleId: "역할 아이디를 입력하세요."
     enterRoleName: "역할 명을 입력하세요."
     selectAuth: "권한을 선택하세요."
-    description: "역할을 관리하세요."
+    description: "역할을 조회하거나 추가, 변경할 수 있습니다."
     searchPlaceholder: "역할 명 / 역할 설명"
 
 # Token
