#8887 문서함에서 태그로 검색하는 기능 추가

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -799,6 +799,7 @@ token:
     searchPlaceholder: "Create User / Contents"
     startDt: "Start Date"
     status: "Status"
+    tagPlaceHolder: "#Tags"
     write: "My Document"
     view: "Document View"
   msg:
