--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -447,7 +447,7 @@ form:
     selectImportFile: "IMPORT 파일을 선택하세요."
   component:
     checkbox: "Checkbox"
-    customCode: "Custom Code"
+    custom-code: "Custom Code"
     date: "Date"
     datetime: "Date Time"
     divider: "Divider"
@@ -470,6 +470,8 @@ form:
     time-default: "컴포넌트에 표시되는 기본값을 설정할 수 있습니다.<br/>'None'을 선택하는 경우 기본 값은 출력되지 않습니다.<br/>'Now'로 선택하는 경우 해당 신청서 작성 시점의 시간이 기본 값으로 출력됩니다.<br/>'hours later'로 선택하고 숫자로 된 값을 넣으면 문서를 작성하는 시점을 기준으로 해당 숫자만큼 이후의 시간이 기본 값으로 사용됩니다. 마이너스 값을 입력하는 경우 이전 시간을 지정할 수 있습니다.<br/>마지막 항목은 특정 시간을 고정으로 표시할 경우 사용하시면 됩니다."
     component-placeholder: "명령어 사용 시 '/'를 입력하세요."
   properties:
+    title: "Form"
+    common: "공통"
     dataAttribute: "컴포넌트 속성"
     desc: "설명"
     display: "출력속성"
@@ -480,6 +482,7 @@ form:
     status: "상태"
     validate: "유효성"
   attribute:
+    align: "정렬"
     mappingId: "매핑 아이디"
     isTopic: "미리보기"
     position: "위치"
