--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -820,6 +820,8 @@ workflowAdmin:
 
 # User
 user:
+  btn:
+    resetPassword: "RESET PASSWORD"
   label:
     all: "All"
     avatar: "Avatar"
@@ -863,6 +865,7 @@ user:
     enterUserPassword: "Please enter your password."
     enterUserRePassword: "Please enter your Reconfirm Password."
     passwordNotEquals: "Passwords do not match."
+    resetPassword: "Your password has been reset."
     sameEmail: "The same Email exists."
     sameUserId: "The same ID exists."
     signUp: "Sign up success.<br/>Please check your email sent to finish authentication."
