--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -429,6 +429,7 @@ form:
     searchPlaceholder: "Form Name / Form Description"
     state: "State"
     templatesList: "Templates List"
+    title: "Form Designer"
     undo: "Undo"
   msg:
     enterFormName: "Please enter a form name."
@@ -692,6 +693,7 @@ process:
     searchPlaceholder: "Process Name / Process Description"
     simulation: "Simulation"
     templatesList: "Templates List"
+    title: "Process Designer"
     undo: "Undo"
   msg:
     description: "View, add, or edit process's information."
