--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -337,7 +337,7 @@ document:
     process: "It has been processed."
     requiredFileupload: "Please upload a file."
     confirmDeleteInstance: "Are you sure you want to delete all documents created in a temporary state?"
-    description: "workflow edit"
+    description: "document search"
     listDescription: "workflow edit"
     checkDuplication: "Duplication document. check form and process"
   display:
