#9250 [기본 SCSS] process.scss : 툴팁 아이콘 정리

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -748,6 +748,7 @@ process:
       action-value: "Action Value"
       is-default: "is Default"
       condition-value: "Condition Value"
+      connection-information: "Connection Information"
       start-id: "Start ID"
       start-name: "Start Name"
       end-id: "End ID"
