--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -2,16 +2,13 @@
 common:
   btn:
     add: "추가"
-    before: "이전"
     cancel: "취소"
     check: "확인"
     close: "닫기"
     delete: "삭제"
-    fileUpload: "파일 업로드"
     list: "목록"
     logout: "로그아웃"
     modify: "수정"
-    next: "다음"
     print: "인쇄"
     process: "처리"
     register: "등록"
@@ -23,7 +20,6 @@ common:
     terminate: "종결"
     update: "변경"
     withdraw: "회수"
-    write: "작성"
   label:
     attachFile: "첨부 파일"
     blank: " "
@@ -36,15 +32,12 @@ common:
     edit: "편집"
     fail: "실패"
     group: "그룹"
-    list: "목록"
     modify: "수정"
     name: "이름"
-    save: "저장"
     searchWord: "검색어를 입력하세요."
     success: "성공"
     tag: "태그"
     title: "제목"
-    totalCount: "건"
     update: "변경"
     updateDate: "수정 일시"
     updateUser: "수정자"
@@ -174,7 +167,6 @@ authentication:
     expiredAuthentication: "인증메일이 만료되었습니다."
     recallAuthentication: "로그인 후 인증메일을 재요청하세요."
     resentAuthentication: "인증메일이 재발송되었습니다."
-    wrongAuthenticationCode: "인증코드가 잘못되었습니다."
 
 # Board
 board:
@@ -193,8 +185,6 @@ board:
     create: "글 등록"
     desc: "게시판 설명"
     detail: "글 상세"
-    disable: "미사용"
-    enable: "사용"
     list: "게시판 조회"
     manager: "게시판 관리"
     modify: "글 수정"
@@ -204,7 +194,6 @@ board:
     readCount: "조회 수"
     reply: "답글 등록"
     replyYn: "답글 사용 여부"
-    roleName: "역할 명"
     searchBoardPlaceholder: "카테고리 / 제목 / 작성자"
     searchPlaceholder: "게시판 명 / 등록자"
     title: "제목"
@@ -215,7 +204,6 @@ board:
     enterAttachFileSize: "첨부파일 용량을 0MB 이상 1024MB 이하로 입력하세요."
     enterBoardTitle: "게시판 명을 입력하세요."
     enterCategoryName: "카테고리 명을 입력하세요."
-    enterSortSize: "정렬순서를 100 이하로 입력하세요."
     modifyDescription: "글을 변경 할 수 있습니다."
     replayDescription: "답글을 추가 할 수 있습니다."
     viewDescription: "글을 조회 할 수 있습니다."
@@ -249,7 +237,6 @@ customCode:
     code: "코드"
     condition: "조건"
     customCode: "커스텀 코드"
-    lastUpdateDate: "마지막 수정일시"
     list: "커스텀 코드 목록"
     name: "커스텀 코드 명"
     pCode: "부모 코드"
@@ -297,8 +284,6 @@ datepicker:
 
 # Department:
 department:
-  btn:
-    selection: "선택"
   label:
     deptList: "부서 목록"
     deptManagement: "부서 관리"
@@ -322,7 +307,6 @@ document:
     print: "신청서 인쇄"
     process: "프로세스"
     register: "신청서 등록"
-    searchDocumentStatus: "문서 상태"
     searchPlaceholder: "문서 이름 / 문서 설명"
     status: "신청서 상태"
     type: "업무흐름 구분"
@@ -386,13 +370,12 @@ error:
 faq:
   label:
     category: "카테고리"
-    content: "내용"
     description: "자주 묻는 질문과 답변입니다."
     detail: "FAQ 상세"
     edit: "FAQ 편집"
     faq: "FAQ"
     list: "FAQ 목록"
-    searchPlaceholder: "카테고리/제목"
+    searchPlaceholder: "카테고리 / 제목"
     title: "제목"
 
 # FileUpload
@@ -416,7 +399,6 @@ form:
     description: "설명"
     detail: "문서양식 상세"
     edit: "문서양식 편집"
-    export: "내보내기"
     form: "문서양식"
     import: "폼 IMPORT"
     importFile: "IMPORT 파일"
@@ -428,15 +410,12 @@ form:
     saveExit: "저장하고 나가기"
     searchPlaceholder: "양식이름 / 문서양식 설명"
     state: "상태"
-    templatesList: "템플릿 목록"
     undo: "작업 취소"
   msg:
     description: "문서양식을 조회 하거나 추가, 변경 할 수 있습니다."
     enterFormName: "양식이름을 입력하세요."
     failedFormDelete: "문서양식을 삭제할 수 없습니다. 발행된 신청서가 있는 지 확인하세요."
-    fileExtensionNotAllow: "IMPORT 파일은 {0} 확장자만 허용됩니다."
-    fileNameDuplication: "동일한 파일 명이 존재합니다."
-    fileuploadFailed: "파일 업로드에 실패하였습니다."
+    fileSelect: "파일을 선택하세요."
     information: "공통 편집 가능한 컴포넌트 세부 속성이 존재하지 않습니다."
     max: "{0} 이하로 입력하세요."
     maxLength: "{0}글자 이하로 입력하세요."
@@ -479,7 +458,7 @@ form:
     name: "이름"
     option: "옵션"
     status: "상태"
-    title: "Form"
+    title: "폼"
     validate: "유효성"
   attribute:
     align: "정렬"
@@ -547,16 +526,12 @@ login:
     gotoLoginPage: "로그인 페이지로 가기"
     kakaoLogin: "카카오 계정으로 로그인"
     login: "로그인"
-    userSignUp: "회원가입"
   label:
     findId: "아이디 찾기"
     findPassword: "비밀번호 찾기"
     gotoMainPage: "메인화면으로 이동"
-    id: "아이디"
-    login: "로그인"
     loginNote: "계정이 있으신가요?"
     or: "또는"
-    password: "패스워드"
     requiredLogin: "로그인이 필요합니다."
     signupNote: "계정 만들기"
     userSignUp: "회원가입"
@@ -610,29 +585,23 @@ notice:
     endDt: "종료일"
     height: "높이"
     list: "공지사항"
-    notSet: "미설정"
     noticePeriod: "공지 기간"
     popUp: "팝업"
     popUpNoticeSettings: "팝업 알림 설정"
-    popUpNoticeSettingsInfo: "팝업 알림 설정 정보"
     popUpPeriod: "팝업 기간"
     popUpPeriodToday: "오늘 하루 이창을 열지 않음"
     searchPlaceholder: "제목 / 작성자"
-    set: "설정"
     strtDt: "시작일"
     topNoticeSettings: "상단 공지 설정"
-    topNoticeSettingsInfo: "상단 공지 설정 정보"
     view: "공지사항 조회"
     width: "넓이"
   msg:
     alreadyDeleted: "이미 삭제된 게시물 입니다."
     checkPopHeightRange: "높이는 500px부터 1000px 사이의 값만 입력 가능합니다."
     checkPopWidthRange: "넓이는 500px부터 1000px 사이의 값만 입력 가능합니다."
-    checkSearchRange: "검색 시작 날짜가 종료 날짜보다 큽니다."
     compareWithPopUpValue: "팝업 알림 시작일이 종료일보다 크거나 같습니다."
     compareWithTopNoticeValue: "상단 공지 시작일이 종료일보다 크거나 같습니다."
     description: "공지사항을 조회하거나 추가, 변경할 수 있습니다."
-    enterFromDt: "검색 시작 날짜를 입력하세요."
     enterPopEndDt: "팝업 종료일을 입력하세요."
     enterPopHeight: "높이를 입력하세요."
     enterPopStrtDt: "팝업 시작일을 입력하세요."
@@ -654,20 +623,15 @@ notification:
 # Portal
 portal:
   label:
-    bottomLeftPhrase: "문의하기"
     bottomPhrase: "원하는 걸 찾을 수 없나요?"
     browserGuidePhrase: "사용 중인 웹 브라우저를 지원하지 않습니다. 아래의 브라우저를 사용해 주세요."
     chrome: "Chrome"
-    download: "자료실"
-    faq: "FAQ"
     firefox: "Firefox"
     login: "로그인"
     main: "메인화면"
     mainPhrase: "기술 지원"
     msEdge: "MS Edge"
-    notice: "공지사항"
     safari: "Safari"
-    search: "검색"
     topPhrase: "안녕하세요! 브레인즈컴퍼니에 오신 것을 환영합니다."
 
 # Process
@@ -681,7 +645,6 @@ process:
     description: "설명"
     detail: "프로세스 상세"
     edit: "프로세스 편집"
-    imageDownload: "이미지로 저장하기"
     import: "프로세스 IMPORT"
     importFile: "IMPORT 파일"
     list: "프로세스 목록"
@@ -691,15 +654,12 @@ process:
     searchPlaceholder: "프로세스 이름 / 프로세스 설명"
     simulation: "미리보기"
     state: "상태"
-    templatesList: "템플릿 목록"
     undo: "작업취소"
   msg:
     description: "프로세스를 조회 하거나 추가, 변경 할 수 있습니다."
     duplicateData: "동일한 데이터가 존재합니다."
     enterProcessName: "프로세스 이름을 입력하세요."
-    fileExtensionNotAllow: "IMPORT 파일은 {0} 확장자만 허용됩니다."
     selectImportFile: "IMPORT 파일을 선택하세요."
-    simulation: "시뮬레이션 점검이 완료되었습니다."
   status:
     destroy: "폐기"
     edit: "편집"
@@ -759,7 +719,7 @@ process:
       start-id: "시작 엘리먼트 아이디"
       start-name: "시작 엘리먼트 이름"
       status: "상태"
-      sub-document-id: "서브 업무흐름"
+      sub-document-id: "서브 업무흐름 아이디"
       subprocess: "서브프로세스"
       target-document-list: "대상 업무흐름"
       targetMappingId: "작업대상 매핑 ID"
@@ -778,10 +738,9 @@ role:
     auth: "권한"
     desc: "역할 설명"
     id: "역할 아이디"
-    manage: "역할관리"
+    manage: "역할 관리"
     name: "역할 명"
     referenceCount: "사용자 참조 개수"
-    role: "역할"
   msg:
     description: "역할을 조회하거나 추가, 변경할 수 있습니다."
     enterRoleId: "역할 아이디를 입력하세요."
@@ -803,7 +762,6 @@ token:
     relatedInstance: "관련 문서"
     searchPlaceholder: "등록자 / 내용"
     startDt: "시작 일시"
-    status: "상태"
     tagPlaceHolder: "#태그"
     view: "문서 조회"
     write: "처리할 문서"
@@ -816,6 +774,7 @@ token:
     requested: "신청한 문서"
     todo: "처리할 문서"
 
+# WorkflowAdmin
 workflowAdmin:
   label:
     description: "설명"
@@ -829,11 +788,9 @@ user:
   btn:
     resetPassword: "비밀번호 초기화"
   label:
-    all: "전체"
     avatar: "아바타"
     createUser: "사용자 등록"
     customSetting: "맞춤설정"
-    date: "날짜 유형"
     department: "부서"
     editUserInfo: "회원 정보 수정"
     email: "이메일"
@@ -857,7 +814,6 @@ user:
     timeFormat: "날짜/시간 유형"
     timezone: "타임존"
     usageStatus: "사용자 사용 여부"
-    user: "사용자"
   msg:
     createUser: "사용자가 등록되었습니다."
     description: "사용자를 조회하거나 추가, 변경할 수 있습니다."
@@ -894,17 +850,6 @@ user:
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; zenius는 포함 가능, zenius는 포함 불가<br/><br/>
     ※ 공백을 허용하지 않는다.<br/>"
 
-  platform:
-    alice: "Alice"
-    google: "Google"
-    kakao: "Kakao"
-  status:
-    certified: "인증 완료"
-    signup: "등록"
-  usageStatusFlag:
-    unused: "미사용"
-    use: "사용"
-
 # Validation
 validation:
   msg:
@@ -915,7 +860,6 @@ validation:
     elementNotExist: "해당 엘리먼트 요소는 존재하지 않습니다."
     pwContainsEmail: "비밀번호에 이메일 아이디가 포함되어 있습니다."
     pwContainsId: "비밀번호에 아이디가 포함되어 있습니다."
-    pwContainsInnerMobileNumber: "비밀번호에 사용자의 휴대폰 번호가 포함되어 있습니다."
     pwNotContainSpace: "비밀번호에 공백을 포함할 수 없습니다."
     pwOneBetween10And20: "1가지 문자 구성의 경우 10자~20자의 비밀번호를 설정해야 합니다."
     pwTwoBetween8And20: "2가지 문자 구성의 경우 8자~20자의 비밀번호를 설정해야 합니다."
