--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -540,7 +540,7 @@ login:
   msg:
     disabledUser: "계정이 비활성화되었습니다. 관리자에게 문의하세요."
     enterId: "아이디를 입력하세요."
-    enterPassword: "패스워드를 입력하세요."
+    enterPassword: "비밀번호를 입력하세요."
     invalidUserOrPassword: "가입하지 않은 아이디이거나, 잘못된 비밀번호입니다."
     ipAccessDenied: "해당 IP는 접근이 불가능합니다."
     redirectedLoginPage: "초 뒤 로그인 페이지로 이동합니다."
