--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -810,7 +810,7 @@ user:
     password: "비밀번호"
     position: "직책"
     profile: "프로필"
-    rePassword: "비밀번호 재확인"
+    rePassword: "재확인 비밀번호"
     role: "사용자 역할"
     searchPlaceholder: "아이디/이름/부서/직책/전화번호"
     signUpDate: "가입일"
